# fastapi_project_pattern

./: .env  .gitlab-ci.yml  Dockerfile  README.md  appspec.yml  docker-compose.yml  entrypoint.sh  project.settings  pyproject.toml  requirements.txt
.circleci/: config.yml
app/: main.py
app/api_views/: README.md  account.py  hello.py
app/tasks/background/: README.md
app/tasks/celery/: README.md  __init__.py  periodic.py
app/utils/: logger.py  send_verification_email.py
app/websocket/: README.md  connection.py
configs/: README.md  celery.py  celeryconfig.py  provider_api.py  settings.py  tags_metadata.py
fastapi_project_pattern/: __init__.py  create_project.py  requirements-dev.txt
models/: role.py  user.py
models/request/: README.md  account.py
models/response/: README.md  account.py  role.py
scripts/: README.md
scripts/aws/: README.md  build.sh  create-service-and-start.sh  install_dependencies.sh  remove-service-and-stop.sh
scripts/vps/: README.md  deploy.sh
secure/: README.md  _password.py  _token.py
tests/: README.md  settings.py  test_hello.py
