[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_project_pattern"
authors = [{name = "Le Tanh Sang", email = "sang.tanhle@gmail.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "GitPython >= 3.1.24"
]

[project.urls]
Source = "https://github.com/kampvie/fastapi_project_pattern"
